# rust-minesweeper

./: .gitignore  README.md  build.sh  index.css  index.html  package-lock.json  package.json
.github/workflows/: build.yml
crate/: Cargo.toml
crate/src/: lib.rs  minesweeper.rs  random.rs  render.rs  utils.rs
crate/src/utils/: cell.rs  mod.rs  view.rs
